WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281742
[WPE][GTK] Fix default return value for webkit_settings_get_webrtc_udp_ports_range()
https://bugs.webkit.org/show_bug.cgi?id=281742
Summary
[WPE][GTK] Fix default return value for webkit_settings_get_webrtc_udp_ports_...
Philippe Normand
Reported
2024-10-18 04:50:48 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-10-18 04:52:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35425
EWS
Comment 2
2024-10-18 06:57:04 PDT
Committed
285399@main
(346fb4f0cdc4): <
https://commits.webkit.org/285399@main
> Reviewed commits have been landed. Closing PR #35425 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug