Fix default return value for webkit_settings_get_webrtc_udp_ports_range() https://bugs.webkit.org/show_bug.cgi?id=281742

Reviewed by Carlos Garcia Campos.

* Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp:
(webkit_settings_get_webrtc_udp_ports_range):

Canonical link: https://commits.webkit.org/285399@main