Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp
@@ -4805,7 +4805,7 @@ void webkit_settings_set_enable_non_composited_webgl(WebKitSettings* settings, g
 const gchar*
 webkit_settings_get_webrtc_udp_ports_range(WebKitSettings* settings)
 {
-    g_return_val_if_fail(WEBKIT_IS_SETTINGS(settings), FALSE);
+    g_return_val_if_fail(WEBKIT_IS_SETTINGS(settings), nullptr);
 #if ENABLE(WEB_RTC)
     return settings->priv->webrtcUDPPortsRange.data();
 #else
